--- a/covid19-japan/default/data/ui/views/covid19_japan_specific_prefecture.xml
+++ b/covid19-japan/default/data/ui/views/covid19_japan_specific_prefecture.xml
@@ -464,8 +464,9 @@
       <single>
         <search base="prefecture_summary" id="last_published_confirmed">
           <query>
-<!-- prefecture_summary -->
-            | timechart span=1d values(yesterdayConfirmed)
+            | eval yesterday=relative_time(now(), "-1d")
+            | where _time&lt;yesterday
+            | timechart span=1d values(newlyConfirmed)
           </query>
         </search>
         <option name="colorBy">trend</option>
@@ -474,6 +475,7 @@
         <option name="numberPrecision">0</option>
         <option name="rangeColors">["0x53a051","0x0877a6","0xf8be34","0xf1813f","0xdc4e41"]</option>
         <option name="rangeValues">[0,30,70,100]</option>
+        <option name="refresh.display">progressbar</option>
         <option name="showSparkline">1</option>
         <option name="showTrendIndicator">1</option>
         <option name="trellis.enabled">0</option>
@@ -556,8 +558,9 @@
       <single>
         <search base="prefecture_summary" id="last_published_deceased">
           <query>
-<!-- prefecture_summary -->
-            | timechart span=1d values(yesterdayDeceased)
+            | eval yesterday=relative_time(now(), "-1d")
+            | where _time&lt;yesterday
+            | timechart span=1d values(newlyDeceased)
           </query>
         </search>
         <option name="colorBy">trend</option>
@@ -566,6 +569,7 @@
         <option name="numberPrecision">0</option>
         <option name="rangeColors">["0x53a051","0x0877a6","0xf8be34","0xf1813f","0xdc4e41"]</option>
         <option name="rangeValues">[0,30,70,100]</option>
+        <option name="refresh.display">progressbar</option>
         <option name="showSparkline">1</option>
         <option name="showTrendIndicator">1</option>
         <option name="trellis.enabled">0</option>
