--- a/covid19-japan/default/data/ui/views/covid19_japan.xml
+++ b/covid19-japan/default/data/ui/views/covid19_japan.xml
@@ -47,6 +47,9 @@
             <a href="https://covid19japan.com/" target="_blank">"Coronavirus Disease (COVID-19) Japan Tracker" (https://covid19japan.com/)</a>
           </li>
           <li>
+            <a href="https://www.e-stat.go.jp/stat-search/database?page=1&amp;statdisp_id=0003412322">人口推計 / 2019年10月1日現在人口推計</a> (「人口推計 010 都道府県，年齢（5歳階級），男女別人口－総人口，日本人人口」政府統計の総合窓口)
+          </li>
+          <li>
             マップタイル出典: 
               <ul>
                 <li>
@@ -173,7 +176,7 @@
           <query>
 <!-- prefectures_all_base -->
             | eval local_earliest=if("$time_earliest$"=="0",0,relative_time(now(),"$time_earliest$"))
-            | where _time&gt;=local_earliest AND _time&lt;relative_time(now(),"-0d@d")
+            | where _time&gt;=local_earliest AND _time&lt;relative_time(now(),"+1d@d")
             | fields _time, name_ja, daily_confirmed
             | xyseries _time, name_ja, daily_confirmed
             | addcoltotals labelfield=_time label=Total
@@ -217,11 +220,13 @@
             | table _time, aliveCumulative
           </query>
         </search>
-        <option name="height">100</option>
+        <option name="colorBy">trend</option>
         <option name="drilldown">none</option>
+        <option name="height">100</option>
         <option name="rangeColors">["0xFFFFFF","0xff88ff","0xffcccc","0xff8888","0xff4444","0xff0000"]</option>
         <option name="rangeValues">[0,2000,4000,8000,10000]</option>
         <option name="refresh.display">progressbar</option>
+        <option name="trendColorInterpretation">inverse</option>
         <option name="underLabel">陽性</option>
         <option name="unit">名</option>
         <option name="useColors">1</option>
@@ -266,10 +271,10 @@
             | table _time, criticalCumulative
           </query>
         </search>
-        <option name="height">100</option>
-        <option name="colorBy">value</option>
+        <option name="colorBy">trend</option>
         <option name="colorMode">none</option>
         <option name="drilldown">none</option>
+        <option name="height">100</option>
         <option name="numberPrecision">0</option>
         <option name="rangeColors">["0xFFFFFF","0xff88ff","0xffcccc","0xff8888","0xff4444","0xff0000"]</option>
         <option name="rangeValues">[0,200,400,800,1000]</option>
@@ -278,7 +283,7 @@
         <option name="trellis.enabled">0</option>
         <option name="trellis.scales.shared">1</option>
         <option name="trellis.size">medium</option>
-        <option name="trendColorInterpretation">standard</option>
+        <option name="trendColorInterpretation">inverse</option>
         <option name="trendDisplayMode">absolute</option>
         <option name="underLabel">重傷</option>
         <option name="unit">名</option>
@@ -296,10 +301,10 @@
             | table _time, recoveredCumulative
           </query>
         </search>
-        <option name="height">100</option>
-        <option name="colorBy">value</option>
+        <option name="colorBy">trend</option>
         <option name="colorMode">none</option>
         <option name="drilldown">none</option>
+        <option name="height">100</option>
         <option name="numberPrecision">0</option>
         <option name="rangeColors">["0xFFFFFF","0xff88ff","0xffcccc","0xff8888","0xff4444","0xff0000"]</option>
         <option name="rangeValues">[0,200,400,800,1000]</option>
@@ -573,16 +578,16 @@
       </input>
       <chart>
         <title>縦軸は線形軸</title>
+        <search type="annotation" base="annotation_base">
+          <query>
+<!-- annotation_base -->
+          </query>
+        </search>
         <search base="daily_confirmed_base">
           <query>
 <!-- prefectures_all_base -->
 <!-- daily_confirmed_base -->
             | $predict_query_prefix$ $target_prefs$ $predict_query_postfix$
-          </query>
-        </search>
-        <search type="annotation" base="annotation_base">
-          <query>
-<!-- annotation_base -->
           </query>
         </search>
         <option name="charting.axisLabelsX.majorLabelStyle.overflowMode">ellipsisNone</option>
@@ -623,17 +628,17 @@
       </chart>
       <chart>
         <title>縦軸は対数軸</title>
+        <search type="annotation" base="annotation_base">
+          <query>
+<!-- annotation_base -->
+          </query>
+        </search>
         <search base="daily_confirmed_base">
           <query>
 <!-- prefectures_all_base -->
 <!-- daily_confirmed_base -->
             | addtotals fieldname="合計"
             | $predict_query_prefix$ $target_prefs$ $predict_query_postfix$
-          </query>
-        </search>
-        <search type="annotation" base="annotation_base">
-          <query>
-<!-- annotation_base -->
           </query>
         </search>
         <option name="charting.axisLabelsX.majorLabelStyle.overflowMode">ellipsisNone</option>
@@ -686,8 +691,8 @@
                 | fields _time, name, name_ja, daily_deceased
               ]
             | fields _time, name, name_ja, daily_confirmed, daily_deceased
-            | eval local_earliest=relative_time(strptime("$last_date$", "%Y/%m/%d %H:%M"),"-7d@d")
-            | where _time&gt;=local_earliest AND _time&lt;relative_time(strptime("$last_date$", "%Y/%m/%d %H:%M"),"+0d@d")
+            | eval local_earliest=relative_time(strptime("$last_date$", "%Y/%m/%d %H:%M"),"+1d@d-7d")
+            | where _time&gt;=local_earliest AND _time&lt;relative_time(strptime("$last_date$", "%Y/%m/%d %H:%M"),"+1d@d")
             | fields - _time, local_earliest
             | eventstats sum(daily_confirmed) as sum_7days_confirmed, sum(daily_deceased) as sum_7days_deceased by name_ja
             | fields - daily_confirmed, daily_deceased
@@ -936,6 +941,11 @@
     <panel>
       <chart>
         <title>縦軸は対数軸</title>
+        <search type="annotation" base="annotation_base">
+          <query>
+<!-- annotation_base -->
+          </query>
+        </search>
         <search base="prefectures_all_base">
           <query>
 <!-- prefectures_all_base -->
@@ -953,11 +963,6 @@
             | sort 0 - Current
             | fields - Current
             | transpose 0 header_field=column column_name=_time
-          </query>
-        </search>
-        <search type="annotation" base="annotation_base">
-          <query>
-<!-- annotation_base -->
           </query>
         </search>
         <option name="charting.axisLabelsX.majorLabelStyle.overflowMode">ellipsisNone</option>
