--- a/covid19-japan/default/data/ui/views/covid19_japan_specific_prefecture.xml
+++ b/covid19-japan/default/data/ui/views/covid19_japan_specific_prefecture.xml
@@ -840,7 +840,7 @@
 <!-- prefectures_all_base -->
 <!-- daily_cofirmed_base -->
             | eval local_earliest=if("$time_earliest$"=="0",0,relative_time(now(),"$time_earliest$"))
-            | where _time&gt;=local_earliest AND _time&lt;relative_time(now(),"-0d@d")
+            | where _time&gt;=local_earliest AND _time&lt;relative_time(now(),"+1d@d")
             | fields - local_earliest
             | $predict_query_prefix$$target_prefecture_ja$$predict_query_postfix$
           </query>
@@ -957,7 +957,6 @@
             | eval wday=case(wday=0,"日",wday=1,"月",wday=2,"火",wday=3,"水",wday=4,"木",wday=5,"金",wday=6,"土")
           </query>
         </search>
-        <option name="height">400</option>
         <option name="charting.axisLabelsX.majorLabelStyle.overflowMode">ellipsisNone</option>
         <option name="charting.axisLabelsX.majorLabelStyle.rotation">0</option>
         <option name="charting.axisTitleX.text">曜日</option>
@@ -976,7 +975,7 @@
         <option name="charting.chart.bubbleMinimumSize">10</option>
         <option name="charting.chart.bubbleSizeBy">area</option>
         <option name="charting.chart.nullValueMode">gaps</option>
-        <option name="charting.chart.overlayFields">"日毎感染数 (平均)"</option>
+        <option name="charting.chart.overlayFields">"日毎死亡数 (平均)"</option>
         <option name="charting.chart.showDataLabels">none</option>
         <option name="charting.chart.sliceCollapsingThreshold">0.01</option>
         <option name="charting.chart.stackMode">default</option>
@@ -986,8 +985,9 @@
         <option name="charting.layout.splitSeries.allowIndependentYRanges">0</option>
         <option name="charting.legend.labelStyle.overflowMode">ellipsisMiddle</option>
         <option name="charting.legend.mode">standard</option>
-        <option name="charting.legend.placement">right</option>
+        <option name="charting.legend.placement">bottom</option>
         <option name="charting.lineWidth">2</option>
+        <option name="height">400</option>
         <option name="trellis.enabled">0</option>
         <option name="trellis.scales.shared">1</option>
         <option name="trellis.size">medium</option>
@@ -1011,7 +1011,6 @@
 <!-- annotation_base -->
           </query>
         </search>
-        <option name="height">400</option>
         <option name="charting.axisLabelsX.majorLabelStyle.overflowMode">ellipsisNone</option>
         <option name="charting.axisLabelsX.majorLabelStyle.rotation">0</option>
         <option name="charting.axisTitleX.visibility">collapsed</option>
@@ -1040,7 +1039,88 @@
         <option name="charting.layout.splitSeries.allowIndependentYRanges">0</option>
         <option name="charting.legend.labelStyle.overflowMode">ellipsisMiddle</option>
         <option name="charting.legend.mode">standard</option>
-        <option name="charting.legend.placement">right</option>
+        <option name="charting.legend.placement">none</option>
+        <option name="charting.lineWidth">2</option>
+        <option name="height">400</option>
+        <option name="trellis.enabled">0</option>
+        <option name="trellis.scales.shared">1</option>
+        <option name="trellis.size">medium</option>
+      </chart>
+    </panel>
+    <panel>
+      <title>10万人当たりの7日間合計感染者数 ($last_date$ 現在)</title>
+      <single>
+        <search base="sevendays_confirmed">
+          <query>
+<!-- sevendays_confirmed -->
+          </query>
+        </search>
+        <option name="colorBy">trend</option>
+        <option name="colorMode">none</option>
+        <option name="drilldown">none</option>
+        <option name="height">100</option>
+        <option name="numberPrecision">0.000</option>
+        <option name="rangeColors">["0xFFFFFF","0xff88ff","0xffcccc","0xff8888","0xff4444","0xff0000"]</option>
+        <option name="rangeValues">[0,2000,4000,8000,10000]</option>
+        <option name="refresh.display">progressbar</option>
+        <option name="trendColorInterpretation">inverse</option>
+        <option name="underLabel">10万人当たりの7日間合計感染者数</option>
+        <option name="unit">人</option>
+        <option name="useColors">1</option>
+      </single>
+      <chart>
+        <search base="prefectures_all_base" id="sevendays_confirmed">
+          <query>
+<!-- prefectures_all_base -->
+            | search name_ja="$target_prefecture_ja$"
+            | fields _time, name, name_ja, daily_confirmed, daily_deceased
+            | streamstats current=t window=7 sum(daily_confirmed) as sum_7days_confirmed, sum(daily_deceased) as sum_7days_deceased by name_ja
+            | fields - daily_confirmed, daily_deceased
+            | join name_ja
+              [
+                | inputlookup populationJapan.csv
+                | where '人口'=="総人口"
+                | rename "全国・都道府県" as name_ja
+                | fields name_ja, "総数"
+              ]
+            | eval "10万人当たりの7日間合計感染者数"=round(sum_7days_confirmed/('総数'/100),3)
+            | fields _time, "10万人当たりの7日間合計感染者数"
+            | sort 0 + _time
+            </query>
+        </search>
+        <search type="annotation" base="annotation_base">
+          <query>
+<!-- annotation_base -->
+          </query>
+        </search>
+        <option name="height">300</option>
+        <option name="charting.axisLabelsX.majorLabelStyle.overflowMode">ellipsisNone</option>
+        <option name="charting.axisLabelsX.majorLabelStyle.rotation">-90</option>
+        <option name="charting.axisTitleX.visibility">collapsed</option>
+        <option name="charting.axisTitleY.visibility">visible</option>
+        <option name="charting.axisTitleY2.visibility">visible</option>
+        <option name="charting.axisX.abbreviation">none</option>
+        <option name="charting.axisX.scale">linear</option>
+        <option name="charting.axisY.abbreviation">none</option>
+        <option name="charting.axisY.scale">linear</option>
+        <option name="charting.axisY2.abbreviation">none</option>
+        <option name="charting.axisY2.enabled">0</option>
+        <option name="charting.axisY2.scale">inherit</option>
+        <option name="charting.chart">line</option>
+        <option name="charting.chart.bubbleMaximumSize">50</option>
+        <option name="charting.chart.bubbleMinimumSize">10</option>
+        <option name="charting.chart.bubbleSizeBy">area</option>
+        <option name="charting.chart.nullValueMode">gaps</option>
+        <option name="charting.chart.showDataLabels">none</option>
+        <option name="charting.chart.sliceCollapsingThreshold">0.01</option>
+        <option name="charting.chart.stackMode">default</option>
+        <option name="charting.chart.style">shiny</option>
+        <option name="charting.drilldown">none</option>
+        <option name="charting.layout.splitSeries">0</option>
+        <option name="charting.layout.splitSeries.allowIndependentYRanges">0</option>
+        <option name="charting.legend.labelStyle.overflowMode">ellipsisMiddle</option>
+        <option name="charting.legend.mode">standard</option>
+        <option name="charting.legend.placement">none</option>
         <option name="charting.lineWidth">2</option>
         <option name="trellis.enabled">0</option>
         <option name="trellis.scales.shared">1</option>
@@ -1055,6 +1135,9 @@
         <ul>
           <li>
             <a href="https://covid19japan.com/" target="_blank">"Coronavirus Disease (COVID-19) Japan Tracker" (https://covid19japan.com/)</a>
+          </li>
+          <li>
+            <a href="https://www.e-stat.go.jp/stat-search/database?page=1&amp;statdisp_id=0003412322">人口推計 / 2019年10月1日現在人口推計</a> (「人口推計 010 都道府県，年齢（5歳階級），男女別人口－総人口，日本人人口」政府統計の総合窓口)
           </li>
 <!--
           <li>
