timechart の span 未指定による不具合を修正

--- a/covid19-japan/default/data/ui/views/covid19_japan_alternate.xml
+++ b/covid19-japan/default/data/ui/views/covid19_japan_alternate.xml
@@ -193,7 +193,7 @@
           <query>
 <!-- get_all_patient -->
             | where status="Deceased"
-            | timechart count
+            | timechart span=1d count
             | streamstats sum(count) as count
           </query>
         </search>
